Hovering over tablist prevents splitting

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       count++;
     });
     
-    container.dock('add', 'view-1', $('#view-1'), 'View 1');
+    container.dock('add', 'view-1', '#view-1', 'View 1');
     container.dock('add', 'view-2', $('#view-2'), 'View 2');
     container.dock('testSplit', 'view-3', $('#view-3'));
     
