--- a/test.html
+++ b/test.html
@@ -6,7 +6,6 @@
 
     <!-- Dependencies -->
     <link rel="stylesheet" href="lib/jquery-ui-1.11.1/jquery-ui.css">
-    <link rel="stylesheet" href="lib/jquery-ui-1.11.1/jquery-ui.theme.custom.css">
     <link rel="stylesheet" href="lib/jquery.layout-latest/layout-default-latest.css">
     <script src="lib/jquery-ui-1.11.1/external/jquery/jquery.js"></script>
     <script src="lib/jquery-ui-1.11.1/jquery-ui.js"></script>
@@ -90,7 +89,8 @@
   <script>
     var container = $('#ui-dock-test');
     container.dock({
-      maxDepth : 4
+      maxDepth : 2,
+      'verticalPriority' : true
     });
     
     var count = 4;
