--- a/example_basic.html
+++ b/example_basic.html
@@ -65,6 +65,12 @@
         margin-left: 15px;
         margin-top: 12px;
       }
+      
+      .ui-dock-highlight {
+        background: rgba(250, 230, 110, 0.3);
+        border:3px solid;
+        border-color: rgba(200, 180, 100, 0.3);
+      }
     </style>
   </head>
   <body>
